--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -1,4 +1,93 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Shopping Cart - Brand</title><meta property="og:type" content="website"><meta name="keywords" content="OSCOMP, CALABARZON CCTV, Candelaria, Candelaria CCTV, CCTV Candelaria, Best CCTV, Install CCTV, Yoy, Yoy Vallarta"><meta name="description" content="OSCOMP offers the best IT Solutions across CALABARZON and provides an industry standards CCTV Sales, Installation, and Configuration"><link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png"><link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png"><link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png"><link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png"><link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png"><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="stylesheet" href="https://cdn.reflowhq.com/v1/toolkit.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap"><link rel="stylesheet" href="assets/fonts/material-icons.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"><link rel="icon" href="LOGO/LOGO.png">
-</head><body><nav class="navbar navbar-light navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav"><div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><img src="assets/img/LOGO/LOGO.png" width="30" height="34"><span>OSCOMP</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navcol-1"><ul class="navbar-nav mx-auto"><li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="services.html">Services</a></li><li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link" href="contacts.html">Contact</a></li></ul><a class="btn btn-primary shadow" role="button" href="pricing.html">Avail NOW</a></div></div></nav><section class="py-5 mt-5"><div class="container py-5"><div class="row mx-auto" style="/*max-width: 700px;*/"><div class="col"><div data-reflow-type="shopping-cart"></div></div></div></div></section><footer class="bg-primary-gradient"><div class="container py-4 py-lg-5"><div class="row justify-content-center"><div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item"><h3 class="fs-6 fw-bold">Services</h3><ul class="list-unstyled"><li><a href="services.html">CCTV Sales &amp; Installation</a></li><li><a href="services.html">Computer Repairs</a></li><li><a href="services.html">IT Solutions</a></li></ul></div><div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item"><h3 class="fs-6 fw-bold">About</h3><ul class="list-unstyled"><li><a href="#">Mission</a></li><li><a href="#">Team</a></li></ul></div><div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social"><div class="fw-bold d-flex align-items-center mb-2"><img src="assets/img/LOGO/LOGO.png" width="30" height="34"><span>OSCOMP</span></div><p class="text-muted copyright">IT Solutions Services.</p></div></div><hr><div class="text-muted d-flex justify-content-between align-items-center pt-3"><p class="mb-0">Copyright © 2022 OSCOMP IT SOLUTION</p><ul class="list-inline mb-0"><li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
-  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
-</svg></li></ul></div></div></footer><script src="assets/js/jquery.min.js"></script><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="https://cdn.reflowhq.com/v1/toolkit.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script><script src="assets/js/script.min.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Shopping Cart - Brand</title>
+    <meta property="og:image" content="assets/img/OG-image.png">
+    <meta name="description" content="OSCOMP offers the best IT Solutions across CALABARZON and provides an industry standards CCTV Sales, Installation, and Configuration">
+    <meta name="keywords" content="OSCOMP, CALABARZON CCTV, Candelaria, Candelaria CCTV, CCTV Candelaria, Best CCTV, Install CCTV, Yoy, Yoy Vallarta">
+    <meta property="og:type" content="website">
+    <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
+    <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
+    <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
+    <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
+    <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.reflowhq.com/v1/toolkit.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
+    <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
+    <link rel="stylesheet" href="assets/css/best-carousel-slide.css">
+    <link rel="stylesheet" href="assets/css/card-3-column-animation-shadows-images.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
+<link rel="icon" href="LOGO/LOGO.png">
+</head>
+
+<body>
+    <nav class="navbar navbar-light navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><img src="assets/img/LOGO/LOGO.png" width="30" height="34"><span>OSCOMP</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contact</a></li>
+                </ul><a class="btn btn-primary shadow" role="button" href="pricing.html">Avail NOW</a>
+            </div>
+        </div>
+    </nav>
+    <section class="py-5 mt-5">
+        <div class="container py-5">
+            <div class="row mx-auto" style="/*max-width: 700px;*/">
+                <div class="col">
+                    <div data-reflow-type="shopping-cart"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="bg-primary-gradient">
+        <div class="container py-4 py-lg-5">
+            <div class="row justify-content-center">
+                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
+                    <h3 class="fs-6 fw-bold">Services</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="services.html">CCTV Sales &amp; Installation</a></li>
+                        <li><a href="services.html">Computer Repairs</a></li>
+                        <li><a href="services.html">IT Solutions</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
+                    <h3 class="fs-6 fw-bold">About</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Mission</a></li>
+                        <li><a href="#">Team</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social">
+                    <div class="fw-bold d-flex align-items-center mb-2"><img src="assets/img/LOGO/LOGO.png" width="30" height="34"><span>OSCOMP</span></div>
+                    <p class="text-muted copyright">IT Solutions Services.</p>
+                </div>
+            </div>
+            <hr>
+            <div class="text-muted d-flex justify-content-between align-items-center pt-3">
+                <p class="mb-0">Copyright © 2022 OSCOMP IT SOLUTION</p>
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
+                            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
+                        </svg></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.reflowhq.com/v1/toolkit.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="assets/js/bold-and-bright.js"></script>
+</body>
+
+</html>
