Change webpage title

--- a/signup.html
+++ b/signup.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+<title>OSCOMP - IT SOLUTION</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Sign up - Brand</title>
-    <meta property="og:image" content="assets/img/OG-image.png">
-    <meta name="description" content="OSCOMP offers the best IT Solutions across CALABARZON and provides an industry standards CCTV Sales, Installation, and Configuration">
-    <meta name="keywords" content="OSCOMP, CALABARZON CCTV, Candelaria, Candelaria CCTV, CCTV Candelaria, Best CCTV, Install CCTV, Yoy, Yoy Vallarta">
     <meta property="og:type" content="website">
+    <meta name="keywords" content="OSCOMP, CALABARZON CCTV, Candelaria, Candelaria CCTV, CCTV Candelaria, Best CCTV, Install CCTV, Yoy, Yoy Vallarta">
+    <meta name="description" content="OSCOMP offers the best IT Solutions across CALABARZON and provides an industry standards CCTV Sales, Installation, and Configuration">
     <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
     <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
     <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
