--- a/services.html
+++ b/services.html
@@ -16,11 +16,10 @@
     <link rel="icon" type="image/png" sizes="330x330" href="assets/img/LOGO/LOGO.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/best-carousel-slide.css">
     <link rel="stylesheet" href="assets/css/card-3-column-animation-shadows-images.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 <link rel="icon" href="LOGO/LOGO.png">
 </head>
@@ -48,7 +47,7 @@
             </div>
             <div class="row row-cols-1 row-cols-md-2 mx-auto" data-aos="fade-right" data-aos-once="true" style="max-width: 900px;">
                 <div class="col mb-5">
-                    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2500" data-bs-keyboard="false" id="carousel-1">
+                    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2000" data-bs-keyboard="false" id="carousel-1">
                         <div class="carousel-inner">
                             <div class="carousel-item active"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/CCTV%20INSTALLATION/Service-slideshow-01.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/CCTV%20INSTALLATION/Service-slideshow-02.jpg" alt="Slide Image"></div>
@@ -62,6 +61,9 @@
                             <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/CCTV%20INSTALLATION/Service-slideshow-10.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/CCTV%20INSTALLATION/Service-slideshow-11.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/CCTV%20INSTALLATION/Service-slideshow-12.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/CCTV%20INSTALLATION/Service-slideshow-13.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/CCTV%20INSTALLATION/Service-slideshow-14.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/CCTV%20INSTALLATION/Service-slideshow-15.jpg" alt="Slide Image"></div>
                         </div>
                     </div>
                 </div>
@@ -74,7 +76,7 @@
             </div>
             <div class="row row-cols-1 row-cols-md-2 mx-auto" data-aos="fade-left" data-aos-once="true" style="max-width: 900px;">
                 <div class="col order-md-last mb-5">
-                    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2500" data-bs-keyboard="false" id="carousel-2">
+                    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2000" data-bs-keyboard="false" id="carousel-2">
                         <div class="carousel-inner">
                             <div class="carousel-item active"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/COMPUTER%20REPAIR/Computer-repair-01.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/COMPUTER%20REPAIR/Computer-repair-02.jpg" alt="Slide Image"></div>
@@ -102,7 +104,7 @@
             </div>
             <div class="row row-cols-1 row-cols-md-2 mx-auto" data-aos="fade-right" data-aos-once="true" style="max-width: 900px;">
                 <div class="col mb-5">
-                    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2500" id="carousel-3">
+                    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2000" id="carousel-3">
                         <div class="carousel-inner">
                             <div class="carousel-item active"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/IT%20SOLUTION/IT-Solution-01.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="rounded img-fluid w-100 d-block" src="assets/img/SERVICES/IT%20SOLUTION/IT-Solution-02.jpg" alt="Slide Image"></div>
@@ -163,8 +165,8 @@
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/aos.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/bold-and-bright.js"></script>
 </body>
 
