Added Location Link and iframe

--- a/index.html
+++ b/index.html
@@ -221,9 +221,14 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Location</h6>
-                                <p class="text-muted mb-0">VSJ Subdivision Candelaria, Quezon</p>
+                                <a href="https://maps.app.goo.gl/WLvFCE36UHPFKPAm7">VSJ Subdivision Candelaria, Quezon</a>
                             </div>
                         </div>
+                        <div class="d-flex align-items-center p-3">
+                            <iframe src="https://www.google.com/maps/embed?pb=!4v1725119934969!6m8!1m7!1siZUFpliLrVmhrZ9MDhbm5g!2m2!1d13.93486338957811!2d121.4266421657959!3f357.8809956724513!4f-1.378979128846737!5f0.7820865974627469" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
